@@ -6,6 +6,7 @@ Version 0.5
 
 * Updated with Flask 0.8 extension structure recommendations and 0.9
   _app_ctx_stack.
+* Added ``{'application_environment': 'loaded_libraries': {...}}`` API data.
 
 Version 0.4.9
 ^^^^^^^^^^^^^
